--- a/.env
+++ b/.env
@@ -2,4 +2,4 @@ PORT=3000
 DB_HOST=mon-backend-db.cluster-c1h3gukzxnqc.us-east-1.rds.amazonaws.com
 DB_USER=admin
 DB_PASSWORD=ibtihel28092003
-DB_NAME=mon-backend-db
+DB_NAME=mon_backend_db
