--- a/.env
+++ b/.env
@@ -1,6 +1,5 @@
 PORT=3000
-DB_HOST=mybackenddb.cluster-c1h3gukzxnqc.us-east-1.rds.amazonaws.com
+DB_HOST=monbackenddb.cluster-c1h3gukzxnqc.us-east-1.rds.amazonaws.com
 DB_USER=admin
 DB_PASSWORD=ibtihel28092003
-DB_NAME=mybackenddb
-DB_PORT=3306
+DB_NAME=monbackenddb
